@@ -670,7 +670,7 @@ Do you want to overwrite?</source>
     <message>
         <location filename="../basegui.cpp" line="980"/>
         <source>&amp;Default</source>
-        <translation>&amp;Стандартни</translation>
+        <translation type="obsolete">&amp;Стандартни</translation>
     </message>
     <message>
         <location filename="../basegui.cpp" line="985"/>
