@@ -555,7 +555,7 @@ Wil je het overschrijven?</translation>
     <message>
         <location filename="../basegui.cpp" line="980"/>
         <source>&amp;Default</source>
-        <translation>&amp;Standaard</translation>
+        <translation type="obsolete">&amp;Standaard</translation>
     </message>
     <message>
         <location filename="../basegui.cpp" line="985"/>
