@@ -555,7 +555,7 @@ Do you want to overwrite?</source>
     <message>
         <location filename="../basegui.cpp" line="980"/>
         <source>&amp;Default</source>
-        <translation>&amp;Стандардно</translation>
+        <translation type="obsolete">&amp;Стандардно</translation>
     </message>
     <message>
         <location filename="../basegui.cpp" line="985"/>
