@@ -720,7 +720,7 @@ Do you want to overwrite?</source>
     <message>
         <location filename="../basegui.cpp" line="980"/>
         <source>&amp;Default</source>
-        <translation>&amp;Varsayılan</translation>
+        <translation type="obsolete">&amp;Varsayılan</translation>
     </message>
     <message>
         <location filename="../basegui.cpp" line="985"/>
