@@ -608,7 +608,7 @@ Do you want to overwrite?</source>
     <message>
         <location filename="../basegui.cpp" line="980"/>
         <source>&amp;Default</source>
-        <translation>預設(&amp;D)</translation>
+        <translation type="obsolete">預設(&amp;D)</translation>
     </message>
     <message>
         <location filename="../basegui.cpp" line="985"/>
